--- a/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectAllEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectAllEmployee.html
@@ -21,9 +21,11 @@ body {
 </head>
 
 <body>
-	<div th:replace="/admin/humanResource/selectAllEmployee/selectEmployeeListHeader.html"></div>
+	<div th:replace="/common/Header.html"></div>
+	<div th:replace="/admin/adminAside.html"></div>
 	<div class="container">
-
+	<div th:replace="/admin/humanResource/selectAllEmployee/selectEmployeeListHeader.html"></div>
+	<br>
 		
 
 
@@ -174,7 +176,7 @@ body {
 						$noTd = $("<td>").text(data.retireNEmployee[index].employeeNo);
 						$nameTd = $("<td>").text(data.retireNEmployee[index].employeeName);
 						$birthTd = $("<td>").text(data.retireNEmployee[index].employeeBirth);
-						$addressTd = $("<td>").text(data.retireNEmployee[index].employeeAddress);
+						$addressTd = $("<td>").text(data.retireNEmployee[index].employeeAddress.replace(/@/g," "));
 						$phoneTd = $("<td>").text(data.retireNEmployee[index].employeePhone);
 						$hireDateTd = $("<td>").text(data.retireNEmployee[index].employeeHireDate);
 
@@ -256,7 +258,7 @@ body {
 						$noTd = $("<td>").text(data.retireYEmployee[index].employeeNo);
 						$nameTd = $("<td>").text(data.retireYEmployee[index].employeeName);
 						$birthTd = $("<td>").text(data.retireYEmployee[index].employeeBirth);
-						$addressTd = $("<td>").text(data.retireYEmployee[index].employeeAddress);
+						$addressTd = $("<td>").text(data.retireYEmployee[index].employeeAddress.replace(/@/g, ' '));
 						$phoneTd = $("<td>").text(data.retireYEmployee[index].employeePhone);
 						$hireDateTd = $("<td>").text(data.retireYEmployee[index].employeeHireDate);
 
