--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacationConfirmList.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacationConfirmList.html
@@ -113,6 +113,11 @@ body {
 						success : function(data) {
 							const $table = $("#vacationTable tbody");
 							const $div = $("#paging");
+							
+				             const confirmY = "승인";
+				             const confirmN = "반려";
+				             const returnY = "반려";
+				             const returnN = "승인";
 
 							/* 데이터 필드, 페이징버튼 필드 초기화 */
 							$table.html("");
@@ -129,26 +134,35 @@ body {
 										data.vacationList[index].requestAdmin);
 								$requestTd = $("<td>").text(
 										data.vacationList[index].requestDate);
-								$startTd = $("<td>")
-										.text(
-												data.vacationList[index].vacationStartDate);
-								$endTd = $("<td>")
-										.text(
-												data.vacationList[index].vacationEndDate);
-								$vNameTd = $("<td>").text(
-										data.vacationList[index].vacationName);
-								$firstTd = $("<td>")
-										.text(
-												data.vacationList[index].vacationFirstConfirmYn);
-								$secondTd = $("<td>")
-										.text(
-												data.vacationList[index].vacationSecondConfirmYn);
-								$returnTd = $("<td>")
-										.text(
-												data.vacationList[index].vacationReturnYn);
-								$lastTd = $("<td>")
-										.text(
-												data.vacationList[index].vacationLastConfirmYn);
+								$startTd = $("<td>").text(data.vacationList[index].vacationStartDate);
+								$endTd = $("<td>").text(data.vacationList[index].vacationEndDate);
+								$vNameTd = $("<td>").text(data.vacationList[index].vacationName);
+								
+								
+								if(data.vacationList[index].vacationFirstConfirmYn == "Y"){
+									$firstTd = $("<td>").html(confirmY);
+								}else{
+									$firstTd = $("<td>").html(confirmN);
+								}
+								
+								if(data.vacationList[index].vacationSecondConfirmYn == "Y"){
+									$secondTd = $("<td>").html(confirmY);
+								}else{
+									$secondTd = $("<td>").html(confirmN);
+								}
+								
+								if(data.vacationList[index].vacationReturnYn == "Y"){
+									$returnTd = $("<td>").html(returnY);
+								}else{
+									$returnTd = $("<td>").html(returnN);
+								}
+								
+								if(data.vacationList[index].vacationLastConfirmYn == "Y"){
+									$lastTd = $("<td>").html(confirmY);
+								}else{
+									$lastTd = $("<td>").html(confirmN);
+								}
+								
 								$tr.append($noTd);
 								$tr.append($nameTd);
 								$tr.append($requestTd);
