--- a/com-project-clean/src/main/resources/templates/employee/checkList/startChecklist.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/startChecklist.html
@@ -22,54 +22,54 @@
 </head>
 
 <body>
-	    <section hidden id="checklist" class="container-fluid" >
-	        <div class="logintopnav col-xl-3">
+	    <section hidden id="checklist" class="container-fluid" align="left">
+	        <div class="logintopnav">
 	            <a href="/" id="backToMain"><h3 class= "mainlogo">CLEANUP</h3></a>
 	        </div>
+			<br><br>
+	        <h3 class="checkTitle" align="center"> 업무 체크리스트 </h3>
 	
-	        <h3 class="title col-xl-3"> 업무 체크리스트 </h3>
-	
-	        <div class="checklist col-xl-3">
-	            <h5 class="title col-sm-3">주방</h5>
-	            <input type="checkbox" id="checkbox1" class="checkbox"> 정리정돈<br>
-	            <input type="checkbox" id="checkbox2" class="checkbox"> 찌든때<br>
-	            <input type="checkbox" id="checkbox3" class="checkbox"> 설거지<br>
-	            <input type="checkbox" id="checkbox4" class="checkbox"> 가스레인지<br>
-	            <input type="checkbox" id="checkbox5" class="checkbox"> 음식물 쓰레기<br>
-	            <input type="checkbox" id="checkbox6" class="checkbox"> 물기 제거<br>
+	        <div class="checklist">
+	            <h5 class="title">주방</h5><br>
+	            <input type="checkbox" id="checkbox1" class="checkbox"> &nbsp; 정리정돈<br>
+	            <input type="checkbox" id="checkbox2" class="checkbox"> &nbsp; 찌든때<br>
+	            <input type="checkbox" id="checkbox3" class="checkbox"> &nbsp; 설거지<br>
+	            <input type="checkbox" id="checkbox4" class="checkbox"> &nbsp; 가스레인지<br>
+	            <input type="checkbox" id="checkbox5" class="checkbox"> &nbsp; 음식물 쓰레기<br>
+	            <input type="checkbox" id="checkbox6" class="checkbox"> &nbsp; 물기 제거<br>
 	        </div>
 	
-	        <div class="checklist col-xl-3">
-	            <h5 class="title col-sm-3">방 / 거실</h5>
-	            <input type="checkbox" id="checkbox7" class="checkbox"> 정리 정돈<br>
-	            <input type="checkbox" id="checkbox8" class="checkbox"> 침구 정돈<br>
-	            <input type="checkbox" id="checkbox9" class="checkbox"> 먼지털기<br>
-	            <input type="checkbox" id="checkbox10" class="checkbox"> 청소기<br>
-	            <input type="checkbox" id="checkbox11" class="checkbox"> 신발장 / 거울<br>
-	            <input type="checkbox" id="checkbox12" class="checkbox"> 걸레질<br>
+	        <div class="checklist">
+	            <h5 class="title">방 / 거실</h5><br>
+	            <input type="checkbox" id="checkbox7" class="checkbox"> &nbsp; 정리 정돈<br>
+	            <input type="checkbox" id="checkbox8" class="checkbox"> &nbsp;침구 정돈<br>
+	            <input type="checkbox" id="checkbox9" class="checkbox"> &nbsp; 먼지털기<br>
+	            <input type="checkbox" id="checkbox10" class="checkbox"> &nbsp; 청소기<br>
+	            <input type="checkbox" id="checkbox11" class="checkbox"> &nbsp; 신발장 / 거울<br>
+	            <input type="checkbox" id="checkbox12" class="checkbox"> &nbsp; 걸레질<br>
 	        </div>
 	
-	        <div class="checklist col-xl-3">
-	            <h5 class="title col-sm-3">화장실</h5>
-	            <input type="checkbox" id="checkbox13" class="checkbox"> 쓰레기통 정리<br>
-	            <input type="checkbox" id="checkbox14" class="checkbox"> 찌든 때, 물 때 정리<br>
-	            <input type="checkbox" id="checkbox15" class="checkbox"> 물기 제거<br>
-	            <input type="checkbox" id="checkbox16" class="checkbox"> 세탁<br>
-	            <input type="checkbox" id="checkbox17" class="checkbox"> 건조<br>
+	        <div class="checklist">
+	            <h5 class="title">화장실</h5><br>
+	            <input type="checkbox" id="checkbox13" class="checkbox"> &nbsp; 쓰레기통 정리<br>
+	            <input type="checkbox" id="checkbox14" class="checkbox"> &nbsp; 찌든 때, 물 때 정리<br>
+	            <input type="checkbox" id="checkbox15" class="checkbox"> &nbsp; 물기 제거<br>
+	            <input type="checkbox" id="checkbox16" class="checkbox"> &nbsp; 세탁<br>
+	            <input type="checkbox" id="checkbox17" class="checkbox"> &nbsp; 건조<br>
 	        </div>
 	
-	        <div class="checklist col-xl-3">
-	            <h5 class="title col-sm-3">부가서비스</h5>
-	            <input type="checkbox" id="checkbox18" class="checkbox"> 레인지 후드<br>
-	            <input type="checkbox" id="checkbox19" class="checkbox"> 에어컨 필터<br>
-	            <input type="checkbox" id="checkbox20" class="checkbox"> 곰팡이<br>
-	            <input type="checkbox" id="checkbox21" class="checkbox"> 창고정리<br>
-	            <input type="checkbox" id="checkbox22" class="checkbox"> 반려동물<br>
-	            <input type="checkbox" id= "checkbox23" class="checkbox"> 복층<br>
+	        <div class="checklist">
+	            <h5 class="title">부가서비스</h5><br>
+	            <input type="checkbox" id="checkbox18" class="checkbox"> &nbsp; 레인지 후드<br>
+	            <input type="checkbox" id="checkbox19" class="checkbox"> &nbsp; 에어컨 필터<br>
+	            <input type="checkbox" id="checkbox20" class="checkbox"> &nbsp; 곰팡이<br>
+	            <input type="checkbox" id="checkbox21" class="checkbox"> &nbsp; 창고정리<br>
+	            <input type="checkbox" id="checkbox22" class="checkbox"> &nbsp; 반려동물<br>
+	            <input type="checkbox" id= "checkbox23" class="checkbox"> &nbsp; 복층<br>
 	        </div>
 	
 	    </section>
-    <script>
+      <script>
 	    const resNo = "[[${resNo}]]";
 	    console.log(resNo)
     	const jbHtml = ""
@@ -92,8 +92,8 @@
 		        });
 		 	}); 
 
-    </script>
-    
+    </script> 
+     
 </body>
 	<script 
 		src="/js/socket.js"></script>
