--- a/com-project-clean/src/main/resources/templates/pay/management/adminPaySelect.html
+++ b/com-project-clean/src/main/resources/templates/pay/management/adminPaySelect.html
@@ -25,18 +25,18 @@
 	           <th>지급날짜</th>
 	        </tr>
 	        <tr th:each="pay : ${ adminPayList }">
-	          <td height="35px" th:text="${ pay.admin.adminName }" th:onclick="|location.href='/pay/adminPaySelectInfo/${ pay.payHistoryAdminNo }'|"></td> 
-	          <td th:text="${ pay.admin.adminJob }" th:onclick="|location.href='/pay/adminPaySelectInfo/${ pay.payHistoryAdminNo }'|"></td> 
-	          <td th:text="${ pay.admin.adminPhone }" th:onclick="|location.href='/pay/adminPaySelectInfo/${ pay.payHistoryAdminNo }'|"></td> 
-	          <td th:text="${ pay.payAdminDate }" th:onclick="|location.href='/pay/adminPaySelectInfo/${ pay.payHistoryAdminNo }'|"></td>  
+	          <td height="35px" th:text="${ pay.admin.adminName }" th:onclick="|location.href='/pay/management/adminPaySelectInfo/${ pay.payHistoryAdminNo }'|"></td> 
+	          <td th:text="${ pay.admin.adminJob }" th:onclick="|location.href='/pay/management/adminPaySelectInfo/${ pay.payHistoryAdminNo }'|"></td> 
+	          <td th:text="${ pay.admin.adminPhone }" th:onclick="|location.href='/pay/management/adminPaySelectInfo/${ pay.payHistoryAdminNo }'|"></td> 
+	          <td th:text="${ pay.payAdminDate }" th:onclick="|location.href='/pay/management/adminPaySelectInfo/${ pay.payHistoryAdminNo }'|"></td>  
 	        </tr>
     	</table>
     	<br>
-    	<div th:replace="pay/adminPayPaging.html"></div>
+    	<div th:replace="pay/management/adminPayPaging.html"></div>
     	
 		<br>
 		<div class="search-area" align="center">
-			<form id="searchForm" action="/pay/adminPaySelect" method="get" style="display: inline-block">
+			<form id="searchForm" action="/pay/management/adminPaySelect" method="get" style="display: inline-block">
 					<select th:with="searchCondition = ${selectCriteria.searchCondition}"
 						id="searchCondition" name="searchCondition">
 						<option value="adminName" th:selected="${ searchCondition } == 'adminName'">이름</option>
