--- a/com-project-clean/src/main/resources/static/css/pay/adminPaySelectInfo.css
+++ b/com-project-clean/src/main/resources/static/css/pay/adminPaySelectInfo.css
@@ -1,7 +1,9 @@
+section {
+	margin-top: 3% !important;
+}
 table{
-	width:95%;
+	width:80%;
 	margin:0 auto;
-	margin-top: 100px;
     font-family: 'MinSans-Medium';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/MinSans-Medium.woff') format('woff');
     font-weight: normal;
