--- a/com-project-clean/src/main/resources/static/css/pay/adminPayWaiting.css
+++ b/com-project-clean/src/main/resources/static/css/pay/adminPayWaiting.css
@@ -1,5 +1,3 @@
-
-
 table{
 	width:100%;
 	margin:0 auto;
@@ -28,7 +26,10 @@ table th, table tr, table td {
  	 border: 1px solid #9AE8F9;
  }
  
-
+ #modifyForm {
+	float:right;	
+	margin-bottom: 3px;
+}
  .borderText {
 	font-family: 'MinSans-Medium';
     font-weight: normal;
@@ -61,21 +62,19 @@ select{
 	height:34px;
 	border:1px solid black;
 	padding-left:31px;
-	margin-left: 78% !important;
 	font-size:14px !important;
 }
 
 #allAdminTable, #paidAdminTable {
     float:left;
-    
-	margin-right:1%;
 }
 
 #allAdminTable {
-	width:54%;
-	
+	margin-right:1%;
+	width:52%;
+	min-width: 300px;;
 }
 
 #paidAdminTable {
-	width:43%;
+	width:47%;
 }
