--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -151,9 +151,8 @@
                             </a>
                 
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">알림1</a></li>
-                                <li><a class="dropdown-item" href="#">알림2</a></li>
-                                <li><a class="dropdown-item" href="#">알림3</a></li>
+                                <li><a class="dropdown-item" href="/pay/management/adminPaySelect">급여 관리</a></li>
+                                <li><a class="dropdown-item" href="/pay/management/adminPaySelect">나의 급여</a></li>
                             </ul>
                         </li>
                     </ul>
