--- a/com-project-clean/src/main/resources/templates/common/payAside.html
+++ b/com-project-clean/src/main/resources/templates/common/payAside.html
@@ -1,38 +1,108 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org"
-	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
-    <link rel="stylesheet" href="commonLayout.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Document</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {
+  font-family: "Lato", sans-serif;
+}
 
+section{
+  width:65%;
+  margin-top:1%;
+}
+/* Fixed sidenav, full height */
+.sidenav {
+  float: left;
+  height: 800px;
+  width: 200px;
+  z-index: 1;
+/*   overflow-x: hidden; */
+  padding-top: 20px;
+  background-color: #ffffff;
+}
+
+/* Style the sidenav links and the dropdown button */
+.sidenav a, .dropdown-btn {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 19px;
+  color: #575757;
+  display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+}
+
+/* On mouse-over */
+.sidenav a:hover, .dropdown-btn:hover {
+  -webkit-text-stroke: 1px;
+  color:rgb(88, 218, 245);
+}
+
+/* Add an active class to the active dropdown button */
+.active {
+    background-color : #f1f1f1;
+    -webkit-text-stroke: 1px;
+}
+
+/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+.dropdown-container {
+/*   display: none; */
+  background-color: #ffffff;
+  padding-left: 8px;
+}
+
+/* Optional: Style the caret down icon */
+.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+}
+
+/* Some media queries for responsiveness */
+/* @media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+} */
+</style>
 </head>
 <body>
-    <aside>
-        <nav class="AsideVar">
-            
-            <button class="btn btn-c btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" 
-                    data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="false">
-            급여 관리
-            </button>
-            <div class="collapse" id="home-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                	<th:block sec:authorize="hasRole('ADMIN')">
-                    	<li><a class="dropdown-item" href="">조회</a></li>
-                     	<li><a class="dropdown-item" href="">조회</a></li>
-                     	<li><a class="dropdown-item" href="">조회</a></li>
-                     </th:block>
-                     <th:block sec:authorize="hasRole('EMPLOYEE')">
-                     	<li><a class="dropdown-item" href="">내 급여 조회</a></li>
-                        <li><a class="dropdown-item" href="">조회</a></li>
-                        <li><a class="dropdown-item" href="">조회</a></li>
-                     </th:block>
-                  </ul>
-            </div>
-            
-        </nav>
-    </aside>
+
+<div class="sidenav">
+    <button class="dropdown-btn">급여관리
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-container">
+        <a href="/pay/management/employeePaySelect">직원 급여 조회</a>
+        <a href="/pay/management/employeePaySelect">우수직원 급여 조회</a>
+        <a href="/pay/management/adminPaySelect">관리자 급여 조회</a>
+        <a href="/pay/management/adminPayWaiting">관리자 급여 지급</a>
+        <a href="/pay/management/surcharge">부가요금 관리</a>
+      </div>
+</div>
+
+
+<script>
+/* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
+var dropdown = document.getElementsByClassName("dropdown-btn");
+var i;
+
+for (i = 0; i < dropdown.length; i++) {
+  dropdown[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var dropdownContent = this.nextElementSibling;
+    if (dropdownContent.style.display === "block") {
+      dropdownContent.style.display = "none";
+    } else {
+      dropdownContent.style.display = "block";
+    }
+  });
+}
+</script>
+
 </body>
-</html>
+</html> 
