--- a/com-project-clean/src/main/resources/templates/pay/management/employeePayPaging.html
+++ b/com-project-clean/src/main/resources/templates/pay/management/employeePayPaging.html
@@ -81,7 +81,7 @@
 	</div>
 
 	<script>
-		const link = "/pay/adminPaySelect";
+		const link = "/pay/management/employeePaySelect";
 		let searchText = "";
 		let searchConditionExist = "[[${ selectCriteria.searchCondition }]]";
 		let searchValueExist = "[[${ selectCriteria.searchValue }]]";
